fix modal z-index

--- a/src/ui/modal/modal.module.scss
+++ b/src/ui/modal/modal.module.scss
@@ -6,7 +6,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 500;
+  z-index: 1000;
 
   display: flex;
   align-items: center;
